--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
         <div class="dream">
             <button class="company"><i class="fa-brands fa-meta"></i> Meta AI</button>
             <button class="company"><i class="fa-brands fa-google"></i> Google</button>
-            <button class="company">J.P MORGAN</button>
+            <button class="company">J.P. MORGAN</button>
             <button class="company"><i class="fa-brands fa-apple"></i> Apple</button>
         </div>
     </footer>
