--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/0e43992e65.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="portfolio.css" type="text/css">
+    <link rel="stylesheet" href="css/portfolio.css" type="text/css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lilita+One&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
     </style>
@@ -16,8 +16,8 @@
     <header>
         <nav>
             <a href="portfolio.html" class="hyperlink">Home</a>
-            <a href="skill.html" class="hyperlink">Skills</a>
-            <a href="testimonial.html" class="hyperlink">Testimonials</a>
+            <a href="skills/skill.html" class="hyperlink">Skills</a>
+            <a href="testimonial/testimonial.html" class="hyperlink">Testimonials</a>
             <a href="" class="hyperlink">Projects </a>
             <a href="" class="hyperlink">Get-In-Touch</a>
         </nav>
