--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <a href="portfolio.html" class="hyperlink">Home</a>
+            <a href="index.html" class="hyperlink">Home</a>
             <a href="skills/skill.html" class="hyperlink">Skills</a>
             <a href="testimonial/testimonial.html" class="hyperlink">Testimonials</a>
             <a href="" class="hyperlink">Projects </a>
