--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="right">
-            <img src="/Users/samuel/Documents/portfolio/portfolio.jpg" alt="">
+            <img src="portfolio.jpg" alt="">
         </div>
     </main>
 
