--- a/skill.html
+++ b/skill.html
@@ -17,7 +17,9 @@
         <nav>
             <a href="portfolio.html" class="hyperlink">Home</a>
             <a href="skill.html" class="hyperlink">Skills</a>
-            <a href="testimonial.html" class="hyperlink">Testimonials</a>
+            <a href="
+            
+            testimonial.html" class="hyperlink">Testimonials</a>
             <a href="" class="hyperlink">Projects </a>
             <a href="" class="hyperlink">Get In Touch</a>
         </nav>
